# Eden-Automata

./: .gitignore  readme.md  初始设计大纲.md
dev/: CMakeLists.txt
dev/include/map/: map.h
dev/src/: CMakeLists.txt  main.cpp
dev/src/map/: map.cpp
技术预研/大规模集群的Shader优化方案/: 预研计划概述.md
